--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,43 @@
-body{margin:0;padding:0;}
+body{
+  margin:0;
+  padding:0;
+  padding-top: 40px;
+}
 
 header nav{
-    width:100%;
-    text-align:center;
-    float:left;
-    background-color:slategray;
-    padding:10px;
+  background-color:slategray;
+  padding-top: 10px;
 }
-header nav a{width:15%;color:white;text-decoration:none;text-shadow:1px 1px 3px rgba(0,0,0,.8);display:inline-block;vertical-align:top;}
+header nav a{
+  width:15%;
+  color:white;
+  text-decoration:none;
+  text-shadow:1px 1px 3px rgba(0,0,0,.8);
+}
 header img.masthead{
-    min-width:100%;
-    height:auto;
-    max-height:400px;
+  min-width:100%;
+  height:auto;
+  max-height:400px;
 }
-header h1{
-    position:absolute;
-    top:30%;
-    left:20%;
-    color:white;
-    text-shadow:2px 2px 3px rgba(0,0,0,.5)
+.jumbotron {
+  padding-top: 0;
+  padding-bottom: 20px;
 }
-section{
-    text-align:center;
-    margin:20px;
+
+form{
+  background-color:wheat;
+  padding-bottom: 10px;
 }
-section article{
-    vertical-align:top;
-    width:30%;
-    display:inline-block;
+#form-entry {
+  padding-left: 0;
+  padding-right: 0;
 }
-section article p{text-align:justify;padding:10px;box-sizing:border-box;}
-form{width:100%;text-align:center;padding:20px;background-color:wheat;}
-form input{width:200px;padding:10px;display;inline-block;}
-form button{padding:12px;border-radius:10px;border:none;transition:all .3s ease;background-color:white;}
-form button:hover{background-color:slateblue;box-shadow:2px 2px 5px rgba(0,0,0,.7);color:white;}
+form button {
+  padding-bottom: 10px;
+}
 footer{background-color: #E38181;}
-footer nav{width:100%;text-align:center;}
-footer p{text-align:center;
-    color:white;
-    margin-bottom:0;padding-bottom:10px;}
+
+footer p{
+  color:white;
+  margin-bottom:0;padding-bottom:10px;
+}
